name:                mu-editor
version:             0.1.0.0
synopsis:            A console text editor written entirely in haskell
-- description:         
homepage:            https://github.com/PelleJuul/Mu
license:             MIT
license-file:        LICENSE
author:              Pelle Juul
maintainer:          pelle@stand.dk
-- copyright:            
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mu
  main-is:             Main.hs

  other-extensions:    MultiParamTypeClasses, TypeSynonymInstances, FlexibleInstances, InstanceSigs
  
  build-depends:       base          >=4.7   && < 4.8, 
                       data-default  >=0.5   && < 0.6, 
                       time          >=1.5   && < 1.6, 
                       bytestring    >=0.10  && < 0.11, 
                       utf8-string   >=1     && < 1.1, 
                       terminal-size >=0.3   && < 0.4,
                       parsec        >=3.1.5 && < 4.0
  
  hs-source-dirs:      src
  
  ghc-options:         -Wall
                       -Werror
                       -fhelpful-errors
                       -threaded

  default-language:    Haskell2010
  
